Adding coming soon page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li>Contact a pharmacist</li>
                     </ul>
                 </div>
-                <button type="button" class = "login-button"><a href = "sh/html/commingSoon.html">Login</a></button>
+                <button type="button" class = "login-button"><a href = "sh/style/comingSoon.css">Login</a></button>
             </div>
                 <div class="text-header-items"> 
                     <h1>We can get your Drug Prescriptions to You</h1>
