Updating coming soon

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="subscription">
                 <label for="Email"> Your Email</label>
                 <input type="email" name="email" id="email" placeholder="example@gmail.com" class = "email-input"> 
-                <button class="subscribe-button"><a href="sh/html/commingSoon.html">Subscribe <img src="/sh/images/send.svg" alt="subscribe icon" class="subscribe-button-image"></a></button>  
+                <button class="subscribe-button"><a href="sh/html/commingSoon.html">Subscribe <img src="sh/images/send.svg" alt="subscribe icon" class="subscribe-button-image"></a></button>  
             </div>
         </div>
         <div class="footer-info">
