--- a/sh/html/commingSoon.html
+++ b/sh/html/commingSoon.html
@@ -18,7 +18,7 @@
     </div>
     <p>Would you like to go back to homepage?</p>
     <div class="resetButton">
-        <a href="/index.html">Homepage
+        <a href="https://ishaadhikary.github.io/responsivePharmacyLandingPage/">Homepage
         </a>
     </div>
                         
